--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/os/app.js"
+    "start": "gulp less && node src/os/app.js"
   },
   "config": {
     "db": "mongodb://127.0.0.1/agenda"
