--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/home-os/home-os#readme",
   "dependencies": {
+    "agenda": "^0.9.0",
     "express": "^4.14.0",
     "fs-extra": "^0.30.0",
     "gulp": "^3.9.1",
