--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/home-os/home-os#readme",
   "dependencies": {
     "agenda": "^0.9.0",
+    "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "fs-extra": "^0.30.0",
     "gulp": "^3.9.1",
