--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
   "homepage": "https://github.com/home-os/home-os#readme",
   "dependencies": {
     "agenda": "^0.9.0",
+    "cylon": "^1.3.0",
+    "cylon-firmata": "^0.24.0",
+    "cylon-gpio": "^0.29.0",
+    "cylon-i2c": "^0.26.1",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "fs-extra": "^0.30.0",
