--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp-less": "^3.1.0",
     "gulp-watch": "^4.3.10",
     "mongodb": "^2.2.10",
+    "node-wifi": "^1.1.0",
     "play": "^0.5.0",
     "sequelize": "^3.24.3",
     "socket.io": "^1.5.0",
