--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm install && gulp less && node src/os/app.js"
+    "start": "npm install && gulp less && node src/os/os.js"
   },
   "config": {
     "db": "mongodb://127.0.0.1/agenda"
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/home-os/home-os#readme",
   "dependencies": {
     "agenda": "^0.9.0",
+    "castv2": "^0.1.9",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "fs-extra": "^0.30.0",
@@ -29,9 +30,11 @@
     "gulp-less": "^3.1.0",
     "gulp-watch": "^4.3.10",
     "mongodb": "^2.2.10",
+    "natural": "^0.4.0",
     "node-wifi": "^1.1.0",
     "play": "^0.5.0",
     "sequelize": "^3.24.3",
+    "slackbots": "^0.5.3",
     "socket.io": "^1.5.0",
     "sqlite3": "^3.1.6",
     "winston": "^2.2.0"
